--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,5 +25,7 @@ jobs:
         rm -rf china_ip_list.txt
         git add .
         git commit -m "Update rsc file"
+        git config --global user.email "18576718+Eccon@users.noreply.github.com"
+        git config --global user.name "Eccon"
         git push --force 
 
