--- a/.github/workflows/anti-ad-clash.yml
+++ b/.github/workflows/anti-ad-clash.yml
@@ -2,7 +2,7 @@ name: anti-ad-clash
 
 on:
   schedule:
-    - cron: 0 18 * * *
+    - cron: 0 18 * * 1
   push:
     branches: [ master ]
   pull_request:
