--- a/.github/workflows/anti-ad-clash.yml
+++ b/.github/workflows/anti-ad-clash.yml
@@ -38,7 +38,7 @@ jobs:
         cat ./apple.china.conf | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' > appletmp.txt
         echo "payload:" > AppleCN.yaml
         cat appletmp.txt| grep -Ev "^(regexp|keyword|full):" | perl -ne '/^(domain:)?([-_a-zA-Z0-9]+(\.[-_a-zA-Z0-9]+)*)/ && print "  - |+.$2|\n"' | sed "s/|/'/g" >> AppleCN.yaml           
-        sed -i '/apps.apple.com/d' appletmp.txt
+        sed -i '/apps.apple.com/d' AppleCN.txt
 
         cat ./google.china.conf | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' > googletmp.txt
         echo "payload:" > GoogleCN.yaml
@@ -47,9 +47,9 @@ jobs:
         
     - name: Run AdguardChinaList
       run: |
-        cat accelerated-domains.china.conf > adguardtmp.txt
-        cat google.china.conf >> adguardtmp.txt
-        cat apple.china.conf >> adguardtmp.txt
+        cat chinadomain > adguardtmp.txt
+        cat appletmp.txt >> adguardtmp.txt
+        cat googletmp.txt >> adguardtmp.txt
         cat adguardtmp.txt | tr "\n" "/" | sed -e 's|^|/|' -e 's|\(.*\)|[\1]127.0.0.1:55555|' > accelerated-domains.china.adguardhome.conf
         echo "https://1.1.1.1/dns-query" >> accelerated-domains.china.adguardhome.conf
         echo "https://8.8.8.8/dns-query" >> accelerated-domains.china.adguardhome.conf
