--- a/.github/workflows/anti-ad-clash.yml
+++ b/.github/workflows/anti-ad-clash.yml
@@ -47,7 +47,7 @@ jobs:
         
     - name: Run AdguardChinaList
       run: |
-        cat chinadomain > adguardtmp.txt
+        cat chinadomain.txt > adguardtmp.txt
         cat appletmp.txt >> adguardtmp.txt
         cat googletmp.txt >> adguardtmp.txt
         cat adguardtmp.txt | tr "\n" "/" | sed -e 's|^|/|' -e 's|\(.*\)|[\1]127.0.0.1:55555|' > accelerated-domains.china.adguardhome.conf
