--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -32,6 +32,7 @@ jobs:
         wget https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/apple.china.conf
         wget https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/google.china.conf
         cat ./accelerated-domains.china.conf | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' > chinadomain.txt
+        sed -i '/hostloc.com/d' chinadomain.txt
         echo "payload:" > direct.yaml
         cat chinadomain.txt| grep -Ev "^(regexp|keyword|full):" | perl -ne '/^(domain:)?([-_a-zA-Z0-9]+(\.[-_a-zA-Z0-9]+)*)/ && print "  - |+.$2|\n"' | sed "s/|/'/g" >> direct.yaml           
         
