--- a/AppleCN.yaml
+++ b/AppleCN.yaml
@@ -8,6 +8,7 @@ payload:
   - '+.adcdownload.apple.com'
   - '+.appldnld.apple.com'
   - '+.appldnld.g.aaplimg.com'
+  - '+.appleid.cdn-apple.com'
   - '+.apps.mzstatic.com'
   - '+.cdn-cn1.apple-mapkit.com'
   - '+.cdn-cn2.apple-mapkit.com'
