--- a/direct.yaml
+++ b/direct.yaml
@@ -14,6 +14,7 @@ payload:
   - '+.000wx.com'
   - '+.001.com'
   - '+.001133.app'
+  - '+.0012482.com'
   - '+.001cndc.com'
   - '+.001daima.com'
   - '+.001en.com'
@@ -2922,6 +2923,7 @@ payload:
   - '+.3250mh.com'
   - '+.3259.com'
   - '+.32800.com'
+  - '+.328888.xyz'
   - '+.3289.com'
   - '+.328f.com'
   - '+.32bh.com'
@@ -3327,7 +3329,6 @@ payload:
   - '+.36992.com'
   - '+.3699wan.com'
   - '+.369beauty.com'
-  - '+.369cc.com'
   - '+.369wenku.com'
   - '+.369xxw.com'
   - '+.36code.com'
@@ -5071,6 +5072,7 @@ payload:
   - '+.5551933.com'
   - '+.5552009.com'
   - '+.55555tao.com'
+  - '+.555dy.fun'
   - '+.555yst.com'
   - '+.555zw.com'
   - '+.5566.net'
@@ -6282,6 +6284,7 @@ payload:
   - '+.789gg.com'
   - '+.789hi.com'
   - '+.789msw.com'
+  - '+.789zy.cc'
   - '+.78bar.com'
   - '+.78dian.com'
   - '+.78diy.com'
@@ -6627,6 +6630,7 @@ payload:
   - '+.833833833.net'
   - '+.8339.org'
   - '+.83480900.com'
+  - '+.834sy.com'
   - '+.83666.com'
   - '+.83681111.com'
   - '+.837711.com'
@@ -6972,7 +6976,6 @@ payload:
   - '+.8tupian.com'
   - '+.8twan.com'
   - '+.8u58.com'
-  - '+.8ucdn.com'
   - '+.8uka.com'
   - '+.8uyx.com'
   - '+.8wan.com'
@@ -7073,6 +7076,7 @@ payload:
   - '+.918ka.cc'
   - '+.918rc.com'
   - '+.918ys.net'
+  - '+.919.com'
   - '+.9191mr.com'
   - '+.9191net.com'
   - '+.9191zx.com'
@@ -7176,6 +7180,7 @@ payload:
   - '+.91open.com'
   - '+.91paobao.com'
   - '+.91pdf.com'
+  - '+.91pet.net'
   - '+.91php.com'
   - '+.91pkpk.com'
   - '+.91porn.cyou'
@@ -7400,6 +7405,7 @@ payload:
   - '+.94you.net'
   - '+.94ys.com'
   - '+.95.com'
+  - '+.95021.com'
   - '+.95060.com'
   - '+.95081.com'
   - '+.950901.com'
@@ -7713,6 +7719,7 @@ payload:
   - '+.99read.com'
   - '+.99rom.com'
   - '+.99sky.com'
+  - '+.99suliao.com'
   - '+.99sun.com'
   - '+.99sushe.com'
   - '+.99vf.com'
@@ -9890,6 +9897,7 @@ payload:
   - '+.artopia-group.com'
   - '+.artp.cc'
   - '+.artplusall.com'
+  - '+.artpro.com'
   - '+.artrade.com'
   - '+.artron.net'
   - '+.artronimages.com'
@@ -10322,6 +10330,7 @@ payload:
   - '+.b355.cc'
   - '+.b35ii.com'
   - '+.b3inside.com'
+  - '+.b3log.org'
   - '+.b3logfile.com'
   - '+.b5200.net'
   - '+.b5b6.com'
@@ -10370,6 +10379,7 @@ payload:
   - '+.babytree.com'
   - '+.babytreeimg.com'
   - '+.bacaoo.com'
+  - '+.bacaosh.com'
   - '+.bacic5i5j.com'
   - '+.backzero.com'
   - '+.bacocis.com'
@@ -11071,6 +11081,7 @@ payload:
   - '+.bdc-rays.com'
   - '+.bdchina.com'
   - '+.bdcloudapi.com'
+  - '+.bdclouddns.com'
   - '+.bdf2.com'
   - '+.bdf304.com'
   - '+.bdfkb.com'
@@ -11385,6 +11396,7 @@ payload:
   - '+.betamao.me'
   - '+.betanews.xyz'
   - '+.betawm.com'
+  - '+.betazixun.com'
   - '+.betop-cn.com'
   - '+.betop365.com'
   - '+.betslw15.com'
@@ -11470,7 +11482,6 @@ payload:
   - '+.bhzhu203.com'
   - '+.bhzhuji.com'
   - '+.bhzpw.com'
-  - '+.bhzygl.com'
   - '+.bhzyxy.net'
   - '+.biacgn.com'
   - '+.bian-min.com'
@@ -11801,7 +11812,6 @@ payload:
   - '+.bisheziliao.com'
   - '+.bishijie.com'
   - '+.bishoujo.moe'
-  - '+.bishuju.com'
   - '+.bitauto.com'
   - '+.bitautoimg.com'
   - '+.bitautotech.com'
@@ -12288,7 +12298,6 @@ payload:
   - '+.blocrepresents.com'
   - '+.blog.htc.com'
   - '+.blog.htcvive.com'
-  - '+.blog.vive.com'
   - '+.blog007.com'
   - '+.blog120.com'
   - '+.blog1984.com'
@@ -12596,6 +12605,7 @@ payload:
   - '+.botnet.cc'
   - '+.botongr.com'
   - '+.botorange.com'
+  - '+.botslab.com'
   - '+.bottos.org'
   - '+.botui.ink'
   - '+.botusg.com'
@@ -17057,6 +17067,7 @@ payload:
   - '+.cnzznz.com'
   - '+.co-effort.com'
   - '+.co-inclusion.org'
+  - '+.co-mall.net'
   - '+.co188.com'
   - '+.co188cdn.com'
   - '+.coalcn.com'
@@ -17297,7 +17308,6 @@ payload:
   - '+.content.nike.com'
   - '+.contentchina.com'
   - '+.contentchina.net'
-  - '+.contentstore.htcvive.com'
   - '+.contiez.com'
   - '+.conuo.com'
   - '+.convergemob.com'
@@ -17971,6 +17981,7 @@ payload:
   - '+.ctjsoft.com'
   - '+.ctlcdn.com'
   - '+.ctldl.windowsupdate.com'
+  - '+.ctlife.tv'
   - '+.ctmon.com'
   - '+.ctn1986.com'
   - '+.ctnz.net'
@@ -18065,6 +18076,7 @@ payload:
   - '+.cunminyi.com'
   - '+.cunnar.com'
   - '+.cunyoulu.com'
+  - '+.cunzj.com'
   - '+.cuobiezi.net'
   - '+.cuour-edu.com'
   - '+.cuour.com'
@@ -18587,6 +18599,7 @@ payload:
   - '+.dajixie.com'
   - '+.dajke.com'
   - '+.dajuntech.com'
+  - '+.dajuyuan.net'
   - '+.dajuyuanyanchu.com'
   - '+.daka.app'
   - '+.daka.net'
@@ -19102,6 +19115,7 @@ payload:
   - '+.ddztv.com'
   - '+.ddzuqin.com'
   - '+.de-moe.org'
+  - '+.de.net'
   - '+.de0.cc'
   - '+.de116.com'
   - '+.de123.net'
@@ -19232,6 +19246,7 @@ payload:
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
   - '+.dengyong.cc'
+  - '+.denic.de'
   - '+.denocn.org'
   - '+.dentistshow.com'
   - '+.denuoexpo.com'
@@ -19250,6 +19265,7 @@ payload:
   - '+.des8.com'
   - '+.desaysv.com'
   - '+.deshui.wang'
+  - '+.design006.com'
   - '+.design521.com'
   - '+.designboard.cc'
   - '+.designsketchskill.com'
@@ -19279,7 +19295,6 @@ payload:
   - '+.developer.dji.com'
   - '+.developer.htcvive.com'
   - '+.developer.microsoft.com'
-  - '+.developer.vive.com'
   - '+.devemi.com'
   - '+.devework.com'
   - '+.devexception.com'
@@ -20476,7 +20491,6 @@ payload:
   - '+.down1997.com'
   - '+.down7788.com'
   - '+.downbei.com'
-  - '+.downbetter.com'
   - '+.downcc.com'
   - '+.downclass.com'
   - '+.downerapi.com'
@@ -20869,6 +20883,7 @@ payload:
   - '+.duozhi.com'
   - '+.duozhishidai.com'
   - '+.duozhuayu.com'
+  - '+.duozhuayu.net'
   - '+.duoziwang.com'
   - '+.dup2.org'
   - '+.dupv.com'
@@ -23207,6 +23222,7 @@ payload:
   - '+.feizao.tv'
   - '+.feizhaojun.com'
   - '+.feizhu.com'
+  - '+.feizhupan.com'
   - '+.feizl.com'
   - '+.fekonmotor.com'
   - '+.felearn.com'
@@ -26831,6 +26847,7 @@ payload:
   - '+.haiboyi.com'
   - '+.haicent.com'
   - '+.haichufang.com'
+  - '+.haici.com'
   - '+.haicj.com'
   - '+.haidaibao.com'
   - '+.haidaoteam.com'
@@ -28340,6 +28357,7 @@ payload:
   - '+.hichina.com'
   - '+.hicling.com'
   - '+.hicloud.com'
+  - '+.hiconey.com'
   - '+.hicoo.net'
   - '+.hicosmo.com'
   - '+.hicp.net'
@@ -30295,6 +30313,7 @@ payload:
   - '+.hypefolio.com'
   - '+.hyper.sh'
   - '+.hypergryph.com'
+  - '+.hypersilicon.com'
   - '+.hyrainbow.com'
   - '+.hysdknb.com'
   - '+.hysec.com'
@@ -30931,6 +30950,7 @@ payload:
   - '+.idkaiu.com'
   - '+.idler-et.com'
   - '+.idmchina.net'
+  - '+.idmzj.com'
   - '+.idn100.com'
   - '+.idname.com'
   - '+.idnscloud.com'
@@ -31129,6 +31149,7 @@ payload:
   - '+.igamecj.com'
   - '+.igao7.com'
   - '+.igaoda.com'
+  - '+.igarden365.com'
   - '+.igbox.net'
   - '+.igdmfg.com'
   - '+.igdzc.com'
@@ -31319,7 +31340,6 @@ payload:
   - '+.ijunxun.com'
   - '+.ijutou.net'
   - '+.ijuwu.com'
-  - '+.ijxkj.com'
   - '+.ijzhang.com'
   - '+.ik123.com'
   - '+.ik3cloud.com'
@@ -31373,7 +31393,6 @@ payload:
   - '+.ilaw66.com'
   - '+.ilawpress.com'
   - '+.ilazycat.com'
-  - '+.ildhy.com'
   - '+.ileci.com'
   - '+.ileedarson.com'
   - '+.ileehoo.com'
@@ -33058,7 +33077,6 @@ payload:
   - '+.jhsdai.com'
   - '+.jhsfojiao.com'
   - '+.jhssapp.com'
-  - '+.jhsssq.com'
   - '+.jht868.com'
   - '+.jhtcgroup.com'
   - '+.jhua168.com'
@@ -33067,6 +33085,7 @@ payload:
   - '+.jhwrsq.com'
   - '+.jhxms.com'
   - '+.jhyongyou.com'
+  - '+.ji-qi.com'
   - '+.ji36.net'
   - '+.ji7.com'
   - '+.jia-he-jia.com'
@@ -35510,6 +35529,7 @@ payload:
   - '+.kbdyw.com'
   - '+.kbengine.org'
   - '+.kbgogo.com'
+  - '+.kbgok.com'
   - '+.kbiao.me'
   - '+.kbiquge.com'
   - '+.kblcdn.com'
@@ -35640,7 +35660,6 @@ payload:
   - '+.kelepi.com'
   - '+.keleqiu.com'
   - '+.keleyi.com'
-  - '+.keli1.xyz'
   - '+.kelibiao.com'
   - '+.kellen.wang'
   - '+.kelon.com'
@@ -35684,7 +35703,6 @@ payload:
   - '+.kerlala.com'
   - '+.kermitym.com'
   - '+.kernel.cc'
-  - '+.kerneldiy.com'
   - '+.kernelgo.org'
   - '+.kernelnote.com'
   - '+.kerneltravel.net'
@@ -38694,6 +38712,7 @@ payload:
   - '+.longygo.com'
   - '+.longyin.net'
   - '+.longyu.cc'
+  - '+.longyucq.com'
   - '+.longyuedu.com'
   - '+.longyusheng.org'
   - '+.longzhongtv.com'
@@ -38823,6 +38842,7 @@ payload:
   - '+.loveyisheng.com'
   - '+.lovezbm.com'
   - '+.lovezhangjunning.com'
+  - '+.lovezhuoyou.com'
   - '+.lovfp.com'
   - '+.lovgiin.com'
   - '+.lovology.com'
@@ -39754,6 +39774,7 @@ payload:
   - '+.mandarinhouse.com'
   - '+.mandian.com'
   - '+.mandudu.com'
+  - '+.manduhu.com'
   - '+.manduwu.com'
   - '+.manew.com'
   - '+.manewvr.com'
@@ -42483,6 +42504,7 @@ payload:
   - '+.nddnrm.com'
   - '+.ndhys.com'
   - '+.ndmh.com'
+  - '+.ndnslab.com'
   - '+.ndoo.net'
   - '+.ndscsoft.com'
   - '+.ndser.net'
@@ -42575,6 +42597,7 @@ payload:
   - '+.netesee.com'
   - '+.netgamecar.com'
   - '+.netiler.com'
+  - '+.netinbag.com'
   - '+.netinfi.com'
   - '+.netinfi.net'
   - '+.netitest.com'
@@ -43451,6 +43474,7 @@ payload:
   - '+.o7h.net'
   - '+.o8ak.com'
   - '+.o8dlu8.com'
+  - '+.o8tv.com'
   - '+.oa025.com'
   - '+.oa0351.com'
   - '+.oa169.com'
@@ -44883,6 +44907,7 @@ payload:
   - '+.pianona.com'
   - '+.pianoun.com'
   - '+.piantou.net'
+  - '+.pianwan.com'
   - '+.pianyim.com'
   - '+.pianyini.com'
   - '+.pianyit.com'
@@ -46980,6 +47005,7 @@ payload:
   - '+.qqzuankuo.com'
   - '+.qqzzz.net'
   - '+.qr25.com'
+  - '+.qrcdn.com'
   - '+.qrcpu.com'
   - '+.qrmanhua.com'
   - '+.qrtest.com'
@@ -47010,6 +47036,7 @@ payload:
   - '+.qsw521.com'
   - '+.qswhcb.com'
   - '+.qswzayy.com'
+  - '+.qsxi.com'
   - '+.qszs.com'
   - '+.qszt.com'
   - '+.qszt.net'
@@ -48591,6 +48618,7 @@ payload:
   - '+.sandaile.com'
   - '+.sandbean.com'
   - '+.sandcomp.com'
+  - '+.sandeepin.com'
   - '+.sandianzhong.com'
   - '+.sandingtv.com'
   - '+.sandslee.com'
@@ -49575,6 +49603,7 @@ payload:
   - '+.shangxueba.com'
   - '+.shangyejihua.com'
   - '+.shangyekj.com'
+  - '+.shangyeluoji.com'
   - '+.shangyexin.com'
   - '+.shangyexinzhi.com'
   - '+.shangyouze.com'
@@ -49621,7 +49650,6 @@ payload:
   - '+.shanzhen.com'
   - '+.shanzhen.me'
   - '+.shanzhonglei.com'
-  - '+.shaodaren.com'
   - '+.shaodts.net'
   - '+.shaoerbc.org'
   - '+.shaoerbianchengwang.com'
@@ -50167,6 +50195,7 @@ payload:
   - '+.shouce.ren'
   - '+.shouce365.com'
   - '+.shouchaobao.vip'
+  - '+.shouchaobaoquan.com'
   - '+.shoucheng123.com'
   - '+.shoucw.com'
   - '+.shoudayy.net'
@@ -50310,6 +50339,7 @@ payload:
   - '+.shuaibo.wang'
   - '+.shuaigay.com'
   - '+.shuaigay.nl'
+  - '+.shuaigay2.com'
   - '+.shuaigeshe.com'
   - '+.shuaigetupian.com'
   - '+.shuaihuajun.com'
@@ -50514,6 +50544,7 @@ payload:
   - '+.shusw.com'
   - '+.shuti.com'
   - '+.shuttle.co'
+  - '+.shutxt.com'
   - '+.shuwangxing.com'
   - '+.shuwulou.com'
   - '+.shuxiao.wang'
@@ -51356,6 +51387,7 @@ payload:
   - '+.sodalife.xyz'
   - '+.sodao.com'
   - '+.sodc8.com'
+  - '+.sodeog.com'
   - '+.sodexo-cn.com'
   - '+.sodhef.com'
   - '+.sodino.com'
@@ -52668,7 +52700,6 @@ payload:
   - '+.syhhidc.com'
   - '+.syhhkj.com'
   - '+.syhospital.com'
-  - '+.syhpeizi.com'
   - '+.syhtcgf.com'
   - '+.syhxnt.com'
   - '+.syiptv.com'
@@ -54077,6 +54108,7 @@ payload:
   - '+.tiantian.com'
   - '+.tiantian8.com'
   - '+.tiantianfm.com'
+  - '+.tiantianfunds.com'
   - '+.tiantiangold.com'
   - '+.tiantianhr.com'
   - '+.tiantianleshuiguo.com'
@@ -55525,6 +55557,7 @@ payload:
   - '+.txjszz.com'
   - '+.txlt.com'
   - '+.txlunwenw.com'
+  - '+.txmcu.com'
   - '+.txmeiju.com'
   - '+.txon.net'
   - '+.txooo.com'
@@ -55642,6 +55675,7 @@ payload:
   - '+.tzfuke.com'
   - '+.tzgcjie.com'
   - '+.tzhealth.com'
+  - '+.tzhubo.com'
   - '+.tzhwcc.com'
   - '+.tzidc.com'
   - '+.tzidt.com'
@@ -55785,6 +55819,7 @@ payload:
   - '+.uctrac.com'
   - '+.uctxt.com'
   - '+.ucuuc.com'
+  - '+.ucw.pub'
   - '+.ucweb.com'
   - '+.ucxinwen.com'
   - '+.ucying.com'
@@ -56258,6 +56293,7 @@ payload:
   - '+.ut8d.com'
   - '+.utan.com'
   - '+.utanbaby.com'
+  - '+.utbon.com'
   - '+.utc-ic.com'
   - '+.utecbj.com'
   - '+.utepo.com'
@@ -56679,6 +56715,7 @@ payload:
   - '+.viday.org'
   - '+.videaba.com'
   - '+.videocc.net'
+  - '+.videofk.com'
   - '+.videohupu.com'
   - '+.videoincloud.com'
   - '+.videoipdata.com'
@@ -58128,6 +58165,7 @@ payload:
   - '+.welian.com'
   - '+.welife001.com'
   - '+.welife100.com'
+  - '+.welinkpark.com'
   - '+.well8.com'
   - '+.wellant88.com'
   - '+.wellcoding.com'
@@ -59822,7 +59860,6 @@ payload:
   - '+.www.globalsign.com'
   - '+.www.htc.com'
   - '+.www.htcsense.com'
-  - '+.www.htcvive.com'
   - '+.www.microsoft.com'
   - '+.www.nike.com'
   - '+.www.pandora.net'
@@ -60852,7 +60889,6 @@ payload:
   - '+.xiaomuji.info'
   - '+.xiaomy.net'
   - '+.xiaomyc.com'
-  - '+.xiaomz.com'
   - '+.xiaonaodai.com'
   - '+.xiaonei.com'
   - '+.xiaoniba.com'
@@ -61493,7 +61529,6 @@ payload:
   - '+.xinyukj99.com'
   - '+.xinyunfuwu.com'
   - '+.xinyunji.com'
-  - '+.xinyuqinggan.com'
   - '+.xinyuwanju.com'
   - '+.xinyuwen.com'
   - '+.xinzaoxing.com'
@@ -61778,6 +61813,7 @@ payload:
   - '+.xlobo.com'
   - '+.xlpan.com'
   - '+.xlrocket.com'
+  - '+.xlsemi.com'
   - '+.xlshou.com'
   - '+.xltkwj.com'
   - '+.xltrip.com'
@@ -61892,7 +61928,6 @@ payload:
   - '+.xmzdls.com'
   - '+.xmzylh.com'
   - '+.xn--2krw29cdqai43k.com'
-  - '+.xn--2qux23confgml.online'
   - '+.xn--4gqwb715dj2dewvbilsep42y.com'
   - '+.xn--55qx5d'
   - '+.xn--6rt008ee0k3ua.com'
@@ -61906,7 +61941,6 @@ payload:
   - '+.xn--fiq8ituh5mn9d1qbc28lu5dusc.xn--vuq861b'
   - '+.xn--fiqs8s'
   - '+.xn--fiqz7g67bsydx1ed00d.com'
-  - '+.xn--fjqz50cv5q3so.online'
   - '+.xn--glr604k.com'
   - '+.xn--io0a7i'
   - '+.xn--it-1r3f.com'
@@ -64379,6 +64413,7 @@ payload:
   - '+.youfen666.com'
   - '+.youfh.com'
   - '+.youfubao.vip'
+  - '+.youfunlab.com'
   - '+.yougababy.com'
   - '+.youganghangmoguan.com'
   - '+.yougaoji.com'
@@ -65056,6 +65091,7 @@ payload:
   - '+.yugasun.com'
   - '+.yuguo.us'
   - '+.yuguod.com'
+  - '+.yuguozw.com'
   - '+.yuheii.com'
   - '+.yuheng.tech'
   - '+.yuhongsl.com'
@@ -65307,6 +65343,7 @@ payload:
   - '+.yuntask.com'
   - '+.yuntemai.com'
   - '+.yuntianti.com'
+  - '+.yuntingiot.com'
   - '+.yuntongbu.com'
   - '+.yuntongcloud.com'
   - '+.yuntongtech.com'
@@ -65346,7 +65383,6 @@ payload:
   - '+.yunyingzhe.com'
   - '+.yunyingzhinan.com'
   - '+.yunyis.com'
-  - '+.yunyiwangluo.com'
   - '+.yunyoufeitian.com'
   - '+.yunyouni.com'
   - '+.yunyu123.com'
@@ -65922,7 +65958,6 @@ payload:
   - '+.zcfirst.com'
   - '+.zcfuhua.com'
   - '+.zcfy.cc'
-  - '+.zcgfgh.com'
   - '+.zcgsfy.com'
   - '+.zciii.com'
   - '+.zcimg.com'
@@ -68006,6 +68041,7 @@ payload:
   - '+.zrj96.com'
   - '+.zrjhwenhua.com'
   - '+.zrmm.com'
+  - '+.zrtech.org'
   - '+.zrtg.com'
   - '+.zrthink.com'
   - '+.zrway.com'
