--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1880,7 +1880,6 @@ payload:
   - '+.189read.com'
   - '+.189read.net'
   - '+.189sec.com'
-  - '+.189share.com'
   - '+.189smarthome.com'
   - '+.189store.com'
   - '+.189works.com'
@@ -5735,7 +5734,6 @@ payload:
   - '+.666629b.com'
   - '+.6666519.net'
   - '+.666666.so'
-  - '+.666898d.com'
   - '+.6669667.com'
   - '+.666baicai.com'
   - '+.666gps.com'
@@ -8983,6 +8981,7 @@ payload:
   - '+.aliwears.com'
   - '+.aliwx.net'
   - '+.alixiaozhan.com'
+  - '+.alixiaozhan.net'
   - '+.alixinwen.com'
   - '+.alixixi.com'
   - '+.alixox.com'
@@ -13860,7 +13859,6 @@ payload:
   - '+.cditv.tv'
   - '+.cdjingfeng.com'
   - '+.cdjingying.com'
-  - '+.cdjinpeng.com'
   - '+.cdjnrc.com'
   - '+.cdjsjx.com'
   - '+.cdjxjy.com'
@@ -14190,6 +14188,7 @@ payload:
   - '+.cfhpc.org'
   - '+.cfido.com'
   - '+.cfiec.net'
+  - '+.cfiecdns.net'
   - '+.cfimg.com'
   - '+.cfkq.net'
   - '+.cflm.com'
@@ -19375,7 +19374,6 @@ payload:
   - '+.dhrcbank.com'
   - '+.dhrest.com'
   - '+.dht5867.com'
-  - '+.dhtb.com'
   - '+.dhwooden.com'
   - '+.dhy559999.com'
   - '+.dhy85888.com'
@@ -19385,7 +19383,6 @@ payload:
   - '+.dhyjaqa.com'
   - '+.dhyz.net'
   - '+.dhzw.cc'
-  - '+.di.com'
   - '+.di3fang.com'
   - '+.di3fang.vip'
   - '+.diablohu.com'
@@ -23300,7 +23297,6 @@ payload:
   - '+.fhd001.com'
   - '+.fhdjh.com'
   - '+.fhdq.net'
-  - '+.fhdr.com'
   - '+.fhg90.com'
   - '+.fhhgj.com'
   - '+.fhkioskmodules.com'
@@ -25071,7 +25067,6 @@ payload:
   - '+.ghboke.com'
   - '+.ghgy.com'
   - '+.ghgy.net'
-  - '+.ghkm.com'
   - '+.ghlearning.com'
   - '+.ghmba.com'
   - '+.ghmcchina.com'
@@ -26187,6 +26182,7 @@ payload:
   - '+.guotv.com'
   - '+.guowaidiaocha.com'
   - '+.guowaitianqi.com'
+  - '+.guowenku.com'
   - '+.guoxingjun.com'
   - '+.guoxinqh.com'
   - '+.guoxue.com'
@@ -30102,7 +30098,6 @@ payload:
   - '+.hxt-semitech.com'
   - '+.hxthjy.com'
   - '+.hxtk.com'
-  - '+.hxttcp.com'
   - '+.hxwglm.com'
   - '+.hxxdsb.com'
   - '+.hxxkw.org'
@@ -31670,6 +31665,7 @@ payload:
   - '+.intelvisioncn.com'
   - '+.inter12.org'
   - '+.inter1908.net'
+  - '+.interactivebrokers.hk'
   - '+.interbator.com'
   - '+.internationalbrand.net'
   - '+.internbird.com'
@@ -31730,7 +31726,6 @@ payload:
   - '+.ioneball.com'
   - '+.ionewu.com'
   - '+.ionic.wang'
-  - '+.ionic8.com'
   - '+.ionichina.com'
   - '+.ionicliquid.org'
   - '+.iooeoo.com'
@@ -37076,7 +37071,6 @@ payload:
   - '+.leagsoft.com'
   - '+.leangoo.com'
   - '+.leankun.com'
-  - '+.leanlan.com'
   - '+.leanote.com'
   - '+.leanote.org'
   - '+.leansoftx.com'
@@ -51132,6 +51126,7 @@ payload:
   - '+.sobeycache.com'
   - '+.sobeycloud.com'
   - '+.sobot.com'
+  - '+.soboten.com'
   - '+.sobug.com'
   - '+.sobuhu.com'
   - '+.socang.com'
@@ -52413,7 +52408,6 @@ payload:
   - '+.sxwpyx.com'
   - '+.sxwrsa.org'
   - '+.sxww.com'
-  - '+.sxxcrl.com'
   - '+.sxxdll.com'
   - '+.sxxiaomeng.com'
   - '+.sxxl.com'
@@ -53245,7 +53239,6 @@ payload:
   - '+.taurus66.com'
   - '+.tavsiktlig.com'
   - '+.tax-edu.net'
-  - '+.tax12366.org'
   - '+.taxjiangkewang.com'
   - '+.taxnote.org'
   - '+.taxspirit.com'
@@ -55934,6 +55927,7 @@ payload:
   - '+.uplookedu.com'
   - '+.uplooking.com'
   - '+.upnb.com'
+  - '+.upowerchain.com'
   - '+.uppsd.com'
   - '+.upqzfile.com'
   - '+.upqzfilebk.com'
@@ -58002,6 +57996,7 @@ payload:
   - '+.wenneart.com'
   - '+.wenpie.com'
   - '+.wenrouge.com'
+  - '+.wenruya.com'
   - '+.wenryxu.com'
   - '+.wensang.com'
   - '+.wenshao-art.com'
@@ -58843,7 +58838,6 @@ payload:
   - '+.wmcn.com'
   - '+.wmedias.com'
   - '+.wmgjd.com'
-  - '+.wmgm.org'
   - '+.wmiao.com'
   - '+.wmiyx.com'
   - '+.wmjk.net'
@@ -60185,6 +60179,7 @@ payload:
   - '+.xfsub.com'
   - '+.xft123.com'
   - '+.xftclub.com'
+  - '+.xfun233.com'
   - '+.xfwi.com'
   - '+.xfxb.net'
   - '+.xfyousheng.com'
@@ -61680,7 +61675,6 @@ payload:
   - '+.xn--w9qy23cc6adz7d.net'
   - '+.xn--wlqw5ebvdhpi5hepihs3c.com'
   - '+.xn--xhq9mt12cf5v.ink'
-  - '+.xn--xhq9mt12cf5v.site'
   - '+.xn--ygtp21bwyedsq.com'
   - '+.xn--zq2aw6m.xyz'
   - '+.xn-ck.com'
@@ -67674,7 +67668,6 @@ payload:
   - '+.zorrowh.com'
   - '+.zou.la'
   - '+.zou114.com'
-  - '+.zou114.net'
   - '+.zoubiao.com'
   - '+.zoucheng.cc'
   - '+.zoucz.com'
