--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3188,7 +3188,6 @@ payload:
   - '+.360xiehui.com'
   - '+.360xixi.com'
   - '+.360xkw.com'
-  - '+.360xs.com'
   - '+.360yfw.com'
   - '+.360youtu.com'
   - '+.360yun.org'
@@ -7658,7 +7657,6 @@ payload:
   - '+.99max.me'
   - '+.99mc.com'
   - '+.99meiju.tv'
-  - '+.99meijutv.com'
   - '+.99meili.com'
   - '+.99mingxing.com'
   - '+.99mst.com'
@@ -8017,11 +8015,9 @@ payload:
   - '+.acg17.com'
   - '+.acg183.com'
   - '+.acg18s.com'
-  - '+.acg2.com'
   - '+.acg4.com'
   - '+.acg456.com'
   - '+.acg6.com'
-  - '+.acg7.com'
   - '+.acgaa.xyz'
   - '+.acgcd.com'
   - '+.acgcp.com'
@@ -11860,7 +11856,6 @@ payload:
   - '+.bj-ka.com'
   - '+.bj-kpn.com'
   - '+.bj-sagtar.com'
-  - '+.bj-saite.com'
   - '+.bj-sea.com'
   - '+.bj-shouqi.com'
   - '+.bj-sydc.com'
@@ -12541,7 +12536,6 @@ payload:
   - '+.bottos.org'
   - '+.botui.ink'
   - '+.botusg.com'
-  - '+.botvs.com'
   - '+.bounb.com'
   - '+.boweifeng.com'
   - '+.bowin8.com'
@@ -13096,6 +13090,7 @@ payload:
   - '+.c3x.me'
   - '+.c4008.com'
   - '+.c400c.cc'
+  - '+.c44ff.com'
   - '+.c4d.live'
   - '+.c4datc.com'
   - '+.c4dba.com'
@@ -15383,7 +15378,6 @@ payload:
   - '+.chinatiredealer.com'
   - '+.chinatmic.com'
   - '+.chinatopbrands.net'
-  - '+.chinatour-net.com'
   - '+.chinatourguide.com'
   - '+.chinatpm.com'
   - '+.chinatpm.net'
@@ -18602,6 +18596,7 @@ payload:
   - '+.dankegongyu.com'
   - '+.dankexiaoyuan.com'
   - '+.danlan.org'
+  - '+.danlirencomedy.com'
   - '+.danlu.net'
   - '+.danmaku.live'
   - '+.danmakupie.com'
@@ -19671,7 +19666,6 @@ payload:
   - '+.dingteam.com'
   - '+.dingxiang-inc.com'
   - '+.dingxin66.com'
-  - '+.dingxin99.com'
   - '+.dingxinhui.com'
   - '+.dingxuewen.com'
   - '+.dingyantec.com'
@@ -22796,6 +22790,7 @@ payload:
   - '+.fanwenbaike.com'
   - '+.fanwenq.com'
   - '+.fanwenvip.com'
+  - '+.fanwenzhan.com'
   - '+.fanxian.com'
   - '+.fanxiang.com'
   - '+.fanxianke.com'
@@ -24207,7 +24202,6 @@ payload:
   - '+.fybxw.com'
   - '+.fycarto.com'
   - '+.fychinago.com'
-  - '+.fychs.com'
   - '+.fydeos.com'
   - '+.fydisk.com'
   - '+.fydmodel.com'
@@ -26382,7 +26376,6 @@ payload:
   - '+.gysq.org'
   - '+.gystatic.com'
   - '+.gytcwb.com'
-  - '+.gytjz.com'
   - '+.gytsg.net'
   - '+.gytsjk.com'
   - '+.gytsm.com'
@@ -26952,6 +26945,7 @@ payload:
   - '+.hanjiaying.com'
   - '+.hanjie.biz'
   - '+.hanjjl.com'
+  - '+.hanju-tv.org'
   - '+.hanjucc.com'
   - '+.hanjudao.com'
   - '+.hanjutiantang.com'
@@ -28849,7 +28843,6 @@ payload:
   - '+.hongyeshuzhai.com'
   - '+.hongyicd.net'
   - '+.hongyingfangshui.com'
-  - '+.hongyingtao.net'
   - '+.hongyue.com'
   - '+.hongyunlww.com'
   - '+.hongyunvren.com'
@@ -29589,6 +29582,7 @@ payload:
   - '+.hubeixuekao.com'
   - '+.hubeiyanjiusheng.com'
   - '+.hubeiyongtai.com'
+  - '+.hubokan.com'
   - '+.hubpd.com'
   - '+.hubu.com'
   - '+.hububbs.com'
@@ -30751,6 +30745,7 @@ payload:
   - '+.idccenter.net'
   - '+.idccom.net'
   - '+.idccun.com'
+  - '+.idceb.com'
   - '+.idcfengye.com'
   - '+.idchh.com'
   - '+.idchz.com'
@@ -33143,6 +33138,7 @@ payload:
   - '+.jiao4.com'
   - '+.jiaoben.net'
   - '+.jiaobuser.com'
+  - '+.jiaochengzhijia.com'
   - '+.jiaodafu.net'
   - '+.jiaodian.pub'
   - '+.jiaodong.net'
@@ -34679,6 +34675,7 @@ payload:
   - '+.junqing360.com'
   - '+.junren.net'
   - '+.junrongdai.com'
+  - '+.junsangs.com'
   - '+.junsaozg.com'
   - '+.junshencm.com'
   - '+.junshi.com'
@@ -35616,6 +35613,7 @@ payload:
   - '+.kfzimg.com'
   - '+.kg-gold.com'
   - '+.kg.com'
+  - '+.kgdt.work'
   - '+.kgfanr.com'
   - '+.kgimg.com'
   - '+.kgogame.com'
@@ -39926,6 +39924,7 @@ payload:
   - '+.mcearnmore.com'
   - '+.mcfun.tv'
   - '+.mcfuzhu.net'
+  - '+.mch5k.com'
   - '+.mchat.com'
   - '+.mchifi.com'
   - '+.mcjcjx.com'
@@ -40075,7 +40074,6 @@ payload:
   - '+.meifazu.com'
   - '+.meifengyigou.com'
   - '+.meigeinc.com'
-  - '+.meigmama.com'
   - '+.meigong8.com'
   - '+.meigongla.com'
   - '+.meigongyun.com'
@@ -40872,7 +40870,6 @@ payload:
   - '+.miyabaobei.com'
   - '+.miyabaobei.hk'
   - '+.miyaboke.com'
-  - '+.miyakei.com'
   - '+.miyanlife.com'
   - '+.miyapay.com'
   - '+.miyouu.com'
@@ -41042,7 +41039,6 @@ payload:
   - '+.mnjj.group'
   - '+.mnkan.com'
   - '+.mnlscz.com'
-  - '+.mnmnh.com'
   - '+.mnpz8.com'
   - '+.mnstory.net'
   - '+.mnwww.com'
@@ -41148,7 +41144,6 @@ payload:
   - '+.moeid.com'
   - '+.moejam.com'
   - '+.moejj.com'
-  - '+.moejn.com'
   - '+.moejp.com'
   - '+.moemiao.net'
   - '+.moenis.com'
@@ -43084,6 +43079,7 @@ payload:
   - '+.nstooll.com'
   - '+.nsw88.com'
   - '+.nsw99.com'
+  - '+.nswyun.com'
   - '+.nsydt.com'
   - '+.nszmz.com'
   - '+.nt.cc'
@@ -43810,7 +43806,6 @@ payload:
   - '+.orz.moe'
   - '+.orz123.com'
   - '+.orz520.com'
-  - '+.orzbd.com'
   - '+.orzbook.com'
   - '+.orzice.com'
   - '+.orzjoy.com'
@@ -43861,7 +43856,6 @@ payload:
   - '+.osyunwei.com'
   - '+.otcgd.com'
   - '+.otcms.com'
-  - '+.otczg.com'
   - '+.otkglass.com'
   - '+.otms.com'
   - '+.otome.me'
@@ -46613,7 +46607,6 @@ payload:
   - '+.qq-xmail.com'
   - '+.qq.cc'
   - '+.qq.ci'
-  - '+.qq.cm'
   - '+.qq.com'
   - '+.qq.do'
   - '+.qq.net'
@@ -48524,7 +48517,6 @@ payload:
   - '+.sayloving.com'
   - '+.saywash.com'
   - '+.sb1152.com'
-  - '+.sb6189.com'
   - '+.sbanfu.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
@@ -48689,6 +48681,7 @@ payload:
   - '+.scsstjt.com'
   - '+.sctaixin.com'
   - '+.sctbc.net'
+  - '+.sctcd.com'
   - '+.sctobacco.com'
   - '+.sctv.com'
   - '+.sctvf.com'
@@ -48945,7 +48938,9 @@ payload:
   - '+.sed3.com'
   - '+.see-far.com'
   - '+.see-source.com'
+  - '+.seea.red'
   - '+.seeapp.com'
+  - '+.seeb.red'
   - '+.seebug.org'
   - '+.seebyleegee.com'
   - '+.seechentech.com'
@@ -49490,6 +49485,7 @@ payload:
   - '+.shcsdq.com'
   - '+.shcsup.com'
   - '+.shcxzxgs.com'
+  - '+.shcymc.com'
   - '+.shdctp.com'
   - '+.shdjt.com'
   - '+.shdrkj.com'
@@ -50643,7 +50639,6 @@ payload:
   - '+.siportal.cdnetworks.com'
   - '+.siposchina.com'
   - '+.siqiangame.com'
-  - '+.siqiclub.com'
   - '+.siqiquan.org'
   - '+.sique.com'
   - '+.sir3.com'
@@ -51448,6 +51443,7 @@ payload:
   - '+.southzw.com'
   - '+.soutu123.com'
   - '+.soutudi.so'
+  - '+.soutushenqi.com'
   - '+.souutu.com'
   - '+.souvr.com'
   - '+.souwifi.com'
@@ -53431,7 +53427,6 @@ payload:
   - '+.tedx.net'
   - '+.tee7.com'
   - '+.teein.com'
-  - '+.teemmm.com'
   - '+.teencn.com'
   - '+.teeqee.com'
   - '+.tefl-china.net'
@@ -53565,7 +53560,6 @@ payload:
   - '+.test404.com'
   - '+.testbird.com'
   - '+.testcoo.com'
-  - '+.testdao.com'
   - '+.testeb.com'
   - '+.testerhome.com'
   - '+.testerlife.com'
@@ -54096,6 +54090,7 @@ payload:
   - '+.tj-kingdee.com'
   - '+.tj-model.com'
   - '+.tj-un.com'
+  - '+.tj-yijiajing.com'
   - '+.tj-zt.com'
   - '+.tj0573.com'
   - '+.tj20.com'
@@ -54845,6 +54840,7 @@ payload:
   - '+.tt83.xyz'
   - '+.tt86.com'
   - '+.tt96596.com'
+  - '+.tt98.com'
   - '+.ttaidu.com'
   - '+.ttbba.com'
   - '+.ttbbss.com'
@@ -57814,6 +57810,7 @@ payload:
   - '+.weixiaotong.com'
   - '+.weixiaotuoke.tech'
   - '+.weixiaov.club'
+  - '+.weixiaov.wang'
   - '+.weixin.com'
   - '+.weixin008.com'
   - '+.weixin111.com'
@@ -58487,7 +58484,6 @@ payload:
   - '+.whzydz.com'
   - '+.whzyht.com'
   - '+.whzyy.net'
-  - '+.wiaapp.com'
   - '+.wiblog.net'
   - '+.wicep.com'
   - '+.wicp.net'
@@ -59189,6 +59185,7 @@ payload:
   - '+.wqcms.com'
   - '+.wqdian.com'
   - '+.wqdian.net'
+  - '+.wqetqi.vip'
   - '+.wqetrip.com'
   - '+.wqge.cc'
   - '+.wqgp.com'
@@ -59585,6 +59582,7 @@ payload:
   - '+.www.globalsign.com'
   - '+.www.htc.com'
   - '+.www.htcsense.com'
+  - '+.www.kaspersky.com'
   - '+.www.microsoft.com'
   - '+.www.nike.com'
   - '+.www.pandora.net'
@@ -60920,6 +60918,7 @@ payload:
   - '+.xima.tv'
   - '+.ximalaya.com'
   - '+.ximalayaos.com'
+  - '+.ximeiapp.com'
   - '+.ximgs.net'
   - '+.ximiplay.com'
   - '+.ximiyouxi.com'
@@ -61122,6 +61121,7 @@ payload:
   - '+.xinli001.cc'
   - '+.xinli001.com'
   - '+.xinli001wx.com'
+  - '+.xinliangxiang.com'
   - '+.xinliceping.com'
   - '+.xinlifudao.com'
   - '+.xinlimaoyi.com'
@@ -61492,6 +61492,7 @@ payload:
   - '+.xk9l.com'
   - '+.xkb1.com'
   - '+.xkbsw.com'
+  - '+.xkcd.in'
   - '+.xkdmp.com'
   - '+.xker.com'
   - '+.xkhouse.com'
@@ -64515,7 +64516,6 @@ payload:
   - '+.ysepay.com'
   - '+.ysext.com'
   - '+.ysgang.com'
-  - '+.ysgou.cc'
   - '+.ysgtg.com'
   - '+.ysgushi.com'
   - '+.yshp.net'
@@ -65933,6 +65933,7 @@ payload:
   - '+.zgldgbsdshyjy.com'
   - '+.zglipin.com'
   - '+.zgljl2012.com'
+  - '+.zglkq.net'
   - '+.zglscom.com'
   - '+.zglww.net'
   - '+.zglxw.com'
