--- a/directbak.yaml
+++ b/directbak.yaml
@@ -44,7 +44,6 @@ payload:
   - '+.007swz.com'
   - '+.007yx.com'
   - '+.008008008.cc'
-  - '+.008008456.com'
   - '+.008008789.com'
   - '+.00817.com'
   - '+.0082tv.com'
@@ -2897,7 +2896,6 @@ payload:
   - '+.3250mh.com'
   - '+.3259.com'
   - '+.32800.com'
-  - '+.328888.xyz'
   - '+.3289.com'
   - '+.328f.com'
   - '+.32bh.com'
@@ -3205,8 +3203,6 @@ payload:
   - '+.363u.com'
   - '+.364000.com'
   - '+.365128.com'
-  - '+.3652886.com'
-  - '+.3653115.com'
   - '+.36543.com'
   - '+.365500.com'
   - '+.365708.com'
@@ -6848,7 +6844,6 @@ payload:
   - '+.89dj.com'
   - '+.89ds.com'
   - '+.89hl.com'
-  - '+.89jl.com'
   - '+.89uu.com'
   - '+.8a.hk'
   - '+.8ao8ao.com'
@@ -7720,7 +7715,6 @@ payload:
   - '+.9fpuhui.com'
   - '+.9fs.com'
   - '+.9g.com'
-  - '+.9gaoding.com'
   - '+.9gty.net'
   - '+.9hcom.com'
   - '+.9he.com'
@@ -11446,7 +11440,6 @@ payload:
   - '+.biaotukeji.com'
   - '+.biaoyi.com'
   - '+.biaoyu.org'
-  - '+.biaoyu168.com'
   - '+.biaozhiku.com'
   - '+.biaozhun.org'
   - '+.biaozhun8.com'
@@ -11956,7 +11949,6 @@ payload:
   - '+.bjipwqzx.com'
   - '+.bjiwex.com'
   - '+.bjjabc.com'
-  - '+.bjjap.com'
   - '+.bjjbsj.com'
   - '+.bjjchf.com'
   - '+.bjjdwx.com'
@@ -12672,7 +12664,6 @@ payload:
   - '+.btc116.com'
   - '+.btc1212.com'
   - '+.btc123.com'
-  - '+.btc126.com'
   - '+.btc17.com'
   - '+.btc38.com'
   - '+.btc5.net'
@@ -15042,8 +15033,8 @@ payload:
   - '+.chinaeda.org'
   - '+.chinaedu.com'
   - '+.chinaedu.net'
-  - '+.chinaeducationexhibition.com'
   - '+.chinaedunet.com'
+  - '+.chinaedunewsw.com'
   - '+.chinaefu.net'
   - '+.chinaehs.net'
   - '+.chinaeic.net'
@@ -23529,6 +23520,7 @@ payload:
   - '+.fliggy.com'
   - '+.fliggy.hk'
   - '+.flintos.com'
+  - '+.flip.fun'
   - '+.fliplus.com'
   - '+.flmjx.com'
   - '+.flnet.com'
@@ -26445,7 +26437,6 @@ payload:
   - '+.gzif.net'
   - '+.gzittc.net'
   - '+.gzj568.com'
-  - '+.gzjab.com'
   - '+.gzjingsha.com'
   - '+.gzjisikj.com'
   - '+.gzjkzzp.com'
@@ -29890,7 +29881,6 @@ payload:
   - '+.huowan.com'
   - '+.huoxing24.com'
   - '+.huoxingba.com'
-  - '+.huoxinggirl.com'
   - '+.huoxingzi.com'
   - '+.huoxun.com'
   - '+.huoyan.com'
@@ -31315,7 +31305,6 @@ payload:
   - '+.imbackr.com'
   - '+.imbeer.com'
   - '+.imblog.in'
-  - '+.imbossdog.com'
   - '+.imbtk.com'
   - '+.imbusy.me'
   - '+.imcaviare.com'
@@ -32276,7 +32265,6 @@ payload:
   - '+.iuoooo.com'
   - '+.iuplus.com'
   - '+.iuuu9.com'
-  - '+.iuv360.com'
   - '+.iuynfg.com'
   - '+.ivali.com'
   - '+.ivan.xin'
@@ -35093,7 +35081,6 @@ payload:
   - '+.kaige68.com'
   - '+.kaihei.co'
   - '+.kaihu.la'
-  - '+.kaihuadian.com'
   - '+.kaihui.com'
   - '+.kaihuia.com'
   - '+.kaijia.com'
@@ -37139,7 +37126,6 @@ payload:
   - '+.lehaitv.com'
   - '+.lehe.com'
   - '+.lehecai.com'
-  - '+.lehepaper.com'
   - '+.lehihi.com'
   - '+.leho.com'
   - '+.lehu.host'
@@ -38993,7 +38979,6 @@ payload:
   - '+.lvguang.net'
   - '+.lvhezi.com'
   - '+.lvhuadai.com'
-  - '+.lvjihong.com'
   - '+.lvjinsuo.com'
   - '+.lvkun.site'
   - '+.lvlian5.com'
@@ -40955,7 +40940,6 @@ payload:
   - '+.mmbread.com'
   - '+.mmc-data.com'
   - '+.mmcxu.com'
-  - '+.mme.ink'
   - '+.mmfad.com'
   - '+.mmfang.cc'
   - '+.mmfbm.com'
@@ -42853,7 +42837,6 @@ payload:
   - '+.nncj.com'
   - '+.nndims.com'
   - '+.nnduyi.com'
-  - '+.nnera.com'
   - '+.nngdjt.com'
   - '+.nngjjx.com'
   - '+.nnhaocheng.com'
@@ -43810,7 +43793,6 @@ payload:
   - '+.ososn.com'
   - '+.osp.io'
   - '+.ospp.com'
-  - '+.ospwnlo.com'
   - '+.oss.link'
   - '+.oss.so'
   - '+.osschina.com'
@@ -44097,6 +44079,7 @@ payload:
   - '+.panbaidu.com'
   - '+.panchuang.net'
   - '+.pancishe.com'
+  - '+.panda-home.com'
   - '+.panda.tv'
   - '+.panda321.com'
   - '+.panda98.com'
@@ -44297,7 +44280,6 @@ payload:
   - '+.pc51.com'
   - '+.pc5210.com'
   - '+.pc6.com'
-  - '+.pc6.org'
   - '+.pc6a.com'
   - '+.pc70.com'
   - '+.pc811.com'
@@ -47625,7 +47607,6 @@ payload:
   - '+.rexsee.com'
   - '+.rexuedongman.com'
   - '+.rexueqingchun.com'
-  - '+.rexzoudesign.com'
   - '+.reyinapp.com'
   - '+.reyoo.com'
   - '+.reyun.com'
@@ -48244,7 +48225,6 @@ payload:
   - '+.s8j.com'
   - '+.s8x1.com'
   - '+.s8xs.com'
-  - '+.s9151.com'
   - '+.s936.com'
   - '+.s955s.com'
   - '+.s95r.com'
@@ -48325,7 +48305,6 @@ payload:
   - '+.salonglong.com'
   - '+.salongweb.com'
   - '+.salonwith.com'
-  - '+.saltyfish.cloud'
   - '+.samanlehua.com'
   - '+.samebar.com'
   - '+.samhotele.com'
@@ -53126,7 +53105,6 @@ payload:
   - '+.taoniupin.com'
   - '+.taooo.cc'
   - '+.taopiaopiao.com'
-  - '+.taopic.com'
   - '+.taopinquan.com'
   - '+.taoq.net'
   - '+.taoqao.com'
@@ -54183,7 +54161,6 @@ payload:
   - '+.tmallvvv.com'
   - '+.tmbbs.com'
   - '+.tmcdn.net'
-  - '+.tmcore.com'
   - '+.tmdm.com'
   - '+.tmeiju.com'
   - '+.tmhong.com'
@@ -54335,6 +54312,7 @@ payload:
   - '+.tongshuai.com'
   - '+.tongtech.com'
   - '+.tongtianta.site'
+  - '+.tongtimes.com'
   - '+.tongtongli.com'
   - '+.tongtool.com'
   - '+.tongwang.net'
@@ -56367,7 +56345,6 @@ payload:
   - '+.vftfishing.com'
   - '+.vfund.org'
   - '+.vfx123.com'
-  - '+.vfxcx.com'
   - '+.vfxinfo.net'
   - '+.vg1234.com'
   - '+.vgabc.com'
@@ -56466,7 +56443,6 @@ payload:
   - '+.violinerhu.com'
   - '+.violinstudy.net'
   - '+.violinww.com'
-  - '+.vip-cdn.net'
   - '+.vip-wifi.com'
   - '+.vip.com'
   - '+.vip120.com'
@@ -57381,7 +57357,6 @@ payload:
   - '+.wch-ic.com'
   - '+.wcjbb.com'
   - '+.wcloud.com'
-  - '+.wcloudpay.com'
   - '+.wcmrpx.com'
   - '+.wcsapi.com'
   - '+.wcsfa.com'
@@ -57686,7 +57661,6 @@ payload:
   - '+.weilongshipin.com'
   - '+.weilt.net'
   - '+.weimai.com'
-  - '+.weimaisong.com'
   - '+.weimaqi.net'
   - '+.weimeiba.com'
   - '+.weimeicun.com'
@@ -58546,7 +58520,6 @@ payload:
   - '+.wind.moe'
   - '+.wind2021.com'
   - '+.windcoder.com'
-  - '+.winddesktop.com'
   - '+.windever.com'
   - '+.windin.com'
   - '+.windleaf.site'
@@ -59571,7 +59544,6 @@ payload:
   - '+.wwwwww.vip'
   - '+.wwwwwwwwww.com'
   - '+.wwxcl.com'
-  - '+.wwxwmw.com'
   - '+.wx-data.com'
   - '+.wx-youyan.net'
   - '+.wx.com'
@@ -61215,7 +61187,6 @@ payload:
   - '+.xiongdong.com'
   - '+.xiongmao666.com'
   - '+.xiongmaojinku.com'
-  - '+.xiongmaoxingyan.com'
   - '+.xiongyin.com'
   - '+.xiongying.com'
   - '+.xiongzhangad.com'
@@ -62835,7 +62806,6 @@ payload:
   - '+.ydxxt.com'
   - '+.ydy.com'
   - '+.ydyeducation.com'
-  - '+.ydyj.me'
   - '+.ydys1688.com'
   - '+.ydyy120.com'
   - '+.ye.com'
