--- a/directbak.yaml
+++ b/directbak.yaml
@@ -930,7 +930,6 @@ payload:
   - '+.1035.mobi'
   - '+.1040jy.com'
   - '+.10419.net'
-  - '+.1048yy.com'
   - '+.105a.com'
   - '+.105mr.com'
   - '+.105zx.com'
@@ -3365,6 +3364,7 @@ payload:
   - '+.37dh.com'
   - '+.37game2.com'
   - '+.37gogo.com'
+  - '+.37gowan.com'
   - '+.37hr.com'
   - '+.37k.com'
   - '+.37live.com'
@@ -6245,6 +6245,7 @@ payload:
   - '+.78oa.com'
   - '+.78pan.com'
   - '+.78te.com'
+  - '+.78tp.com'
   - '+.78zph.com'
   - '+.79.com'
   - '+.790092.com'
@@ -6254,7 +6255,6 @@ payload:
   - '+.7940.com'
   - '+.79432.com'
   - '+.794579.com'
-  - '+.7958.com'
   - '+.7958.net'
   - '+.796.com'
   - '+.7964b.com'
@@ -7197,7 +7197,6 @@ payload:
   - '+.91yunying.com'
   - '+.91yxbox.com'
   - '+.91zhiwang.com'
-  - '+.91zhuti.com'
   - '+.91zwk.com'
   - '+.91zy.com'
   - '+.92.net'
@@ -9092,6 +9091,7 @@ payload:
   - '+.alongsky.com'
   - '+.alookbrowser.com'
   - '+.alookql.com'
+  - '+.alookweb.com'
   - '+.alpaca.run'
   - '+.alpha-browser.com'
   - '+.alpha-star.org'
@@ -10829,6 +10829,7 @@ payload:
   - '+.batian.net'
   - '+.batmanit.com'
   - '+.batpool.com'
+  - '+.battery-cert.com'
   - '+.batterydir.com'
   - '+.batterykey.com'
   - '+.battleofballs.com'
@@ -11083,7 +11084,6 @@ payload:
   - '+.beemarket.tv'
   - '+.beep365.com'
   - '+.beeplay123.com'
-  - '+.beepool.org'
   - '+.beervm.club'
   - '+.beervm.xyz'
   - '+.beeshow.tv'
@@ -11705,6 +11705,7 @@ payload:
   - '+.biquluo.com'
   - '+.biqumo.com'
   - '+.biququ.com'
+  - '+.biqusa.com'
   - '+.biqushu.com'
   - '+.biqusoso.com'
   - '+.biquter.xyz'
@@ -15753,6 +15754,7 @@ payload:
   - '+.chunshuitang.com'
   - '+.chunshuizhijia.com'
   - '+.chunsuns.com'
+  - '+.chuntiansongart.com'
   - '+.chunxuanmao.com'
   - '+.chunyao.org'
   - '+.chunyiscdk.com'
@@ -17037,7 +17039,6 @@ payload:
   - '+.codeweblog.com'
   - '+.codewenda.com'
   - '+.codewoody.com'
-  - '+.codeyu.com'
   - '+.codezyw.com'
   - '+.codin.im'
   - '+.coding-newsletter.com'
@@ -17720,7 +17721,6 @@ payload:
   - '+.csmc-cloud.com'
   - '+.csmscon.com'
   - '+.csnbgsh.com'
-  - '+.csnews.net'
   - '+.csnpr.com'
   - '+.cspda.net'
   - '+.cspengbo.com'
@@ -18893,6 +18893,7 @@ payload:
   - '+.dcwj168.com'
   - '+.dcxnews.com'
   - '+.dczou.com'
+  - '+.dd-advisor.com'
   - '+.dd-img.com'
   - '+.dd.net'
   - '+.dd128.com'
@@ -25763,6 +25764,7 @@ payload:
   - '+.grikin.com'
   - '+.grinm.com'
   - '+.grirem.com'
+  - '+.grizcom.com'
   - '+.grmxdy.com'
   - '+.gro2004.com'
   - '+.gro2005.com'
@@ -26669,7 +26671,6 @@ payload:
   - '+.hahour.com'
   - '+.hahtlyy.com'
   - '+.hai0.com'
-  - '+.hai3.store'
   - '+.haiana.com'
   - '+.haianbank.com'
   - '+.haianedu.net'
@@ -28007,7 +28008,6 @@ payload:
   - '+.heytapmobi.com'
   - '+.heytea.com'
   - '+.heyuan5.com'
-  - '+.heyunchou.com'
   - '+.heyuyhw.com'
   - '+.heywoodsminiprogram.com'
   - '+.heywow.net'
@@ -28189,6 +28189,7 @@ payload:
   - '+.hicss.net'
   - '+.hiczp.com'
   - '+.hidesigncloud.com'
+  - '+.hideystudio.com'
   - '+.hiditie.com'
   - '+.hidva.com'
   - '+.hienshi.com'
@@ -29513,6 +29514,7 @@ payload:
   - '+.huayiming.com'
   - '+.huayinjapan.com'
   - '+.huayinziben.com'
+  - '+.huayiwork.com'
   - '+.huayoumengze.com'
   - '+.huayoutianyu.com'
   - '+.huayuanlcd.com'
@@ -29779,6 +29781,7 @@ payload:
   - '+.hunbei.com'
   - '+.hunbei1.com'
   - '+.hunbei4.com'
+  - '+.hunbei5.com'
   - '+.hunbohui.info'
   - '+.hunbys.com'
   - '+.huncct.com'
@@ -30784,6 +30787,7 @@ payload:
   - '+.idomb.com'
   - '+.idongde.com'
   - '+.idongdong.com'
+  - '+.idongniu.com'
   - '+.idongte.com'
   - '+.idosend.com'
   - '+.idotools.com'
@@ -30887,6 +30891,7 @@ payload:
   - '+.ifanr.in'
   - '+.ifanrusercontent.com'
   - '+.ifareast.com'
+  - '+.ifatrabbit.com'
   - '+.ifavart.com'
   - '+.ifaxin.com'
   - '+.ifaxin.org'
@@ -31273,6 +31278,7 @@ payload:
   - '+.im5i.com'
   - '+.im87.net'
   - '+.imac.hk'
+  - '+.imaccn.com'
   - '+.imaegoo.com'
   - '+.imageaccelerate.com'
   - '+.imageedu.com'
@@ -37443,7 +37449,6 @@ payload:
   - '+.lianbijr.com'
   - '+.lianchuang.com'
   - '+.liancsoft.com'
-  - '+.liandaocn.com'
   - '+.liandaomobi.com'
   - '+.liandaquan.com'
   - '+.liang.com'
@@ -37605,7 +37610,6 @@ payload:
   - '+.liepincc.com'
   - '+.liepinoverseas.com'
   - '+.lieqi.com'
-  - '+.lieqinews.com'
   - '+.lierenzy.fun'
   - '+.liesauer.net'
   - '+.lietou-edm.com'
@@ -41164,6 +41168,7 @@ payload:
   - '+.mojidong.com'
   - '+.mojieai.com'
   - '+.mojitest.com'
+  - '+.mojocube.com'
   - '+.mojuedu.com'
   - '+.mokahr.com'
   - '+.mokalady.com'
@@ -41344,6 +41349,7 @@ payload:
   - '+.moxiai.com'
   - '+.moxian.com'
   - '+.moxiaofei.com'
+  - '+.moxiaoqihuoguo.com'
   - '+.moxing.net'
   - '+.moxingyun.com'
   - '+.moxiu.com'
@@ -41448,6 +41454,7 @@ payload:
   - '+.mshishang.com'
   - '+.mshot.com'
   - '+.mshouyou.com'
+  - '+.mshxw.com'
   - '+.msits.com'
   - '+.msjcqm.com'
   - '+.mskjf.com'
@@ -42787,6 +42794,7 @@ payload:
   - '+.nk84.com'
   - '+.nkscdn.com'
   - '+.nktaba.com'
+  - '+.nktxv.com'
   - '+.nkyp.com'
   - '+.nlark.com'
   - '+.nlinkline.com'
@@ -42848,6 +42856,7 @@ payload:
   - '+.nnmutong.com'
   - '+.nnn666.com'
   - '+.nnnews.net'
+  - '+.nnsbbs.com'
   - '+.nnsc6.com'
   - '+.nnsky.com'
   - '+.nnszwl.com'
@@ -43084,7 +43093,6 @@ payload:
   - '+.num1dns.com'
   - '+.nunu8.com'
   - '+.nuobeiliao.com'
-  - '+.nuodasoft.com'
   - '+.nuodefund.com'
   - '+.nuoder.com'
   - '+.nuoha.vip'
@@ -43486,7 +43494,6 @@ payload:
   - '+.omowork.com'
   - '+.ompchina.net'
   - '+.omsheji.com'
-  - '+.omtxw.com'
   - '+.omuying.com'
   - '+.on-sun.com'
   - '+.onaliyun.com'
@@ -44156,7 +44163,6 @@ payload:
   - '+.paomou.com'
   - '+.paopao.com'
   - '+.paopaoche.net'
-  - '+.paopaochina.com'
   - '+.paopaox.com'
   - '+.paoshuba.cc'
   - '+.paoxq.com'
@@ -45327,6 +45333,7 @@ payload:
   - '+.psd.net'
   - '+.psd8.com'
   - '+.psdiv.com'
+  - '+.pse-meti.com'
   - '+.psgui.com'
   - '+.psing.tech'
   - '+.psjay.com'
@@ -45783,6 +45790,7 @@ payload:
   - '+.qh-cdn.com'
   - '+.qh-lb.com'
   - '+.qh.dlservice.microsoft.com'
+  - '+.qh.la'
   - '+.qh0534.net'
   - '+.qh24.com'
   - '+.qh5800.com'
@@ -46921,7 +46929,6 @@ payload:
   - '+.quhuaxue.com'
   - '+.quhubei.com'
   - '+.quhuichang.net'
-  - '+.quiboat.com'
   - '+.quick-x.com'
   - '+.quickapi.net'
   - '+.quickbass.com'
@@ -47210,6 +47217,7 @@ payload:
   - '+.r1x1.com'
   - '+.r1y.com'
   - '+.r220.cc'
+  - '+.r2coding.com'
   - '+.r2g.net'
   - '+.r2yx.com'
   - '+.r337iz6.com'
@@ -48353,7 +48361,6 @@ payload:
   - '+.sanguocard.com'
   - '+.sanguoh5.com'
   - '+.sanguohero.com'
-  - '+.sanguoinfo.com'
   - '+.sanguosha.com'
   - '+.sanguozz.com'
   - '+.sanhao.com'
@@ -48637,6 +48644,7 @@ payload:
   - '+.scutef.org'
   - '+.scutsee.com'
   - '+.scuvc.com'
+  - '+.scw123.com'
   - '+.scw98.com'
   - '+.scweixiao.com'
   - '+.scwj.net'
@@ -49174,7 +49182,6 @@ payload:
   - '+.sh7.com'
   - '+.sh85gk.com'
   - '+.sh8y.com'
-  - '+.sh8yyxmrk.com'
   - '+.sh9130.com'
   - '+.sh9yuan.com'
   - '+.sha-cun.com'
@@ -49742,6 +49749,7 @@ payload:
   - '+.shinyway.org'
   - '+.shiove.com'
   - '+.ship56.net'
+  - '+.shipengliang.com'
   - '+.shipfinder.com'
   - '+.shipgce.com'
   - '+.shiphr.com'
@@ -50261,6 +50269,7 @@ payload:
   - '+.shuzixiaoyuan.com'
   - '+.shuziyinpin.com'
   - '+.shvlee.com'
+  - '+.shwcsh.com'
   - '+.shwdbjgs.com'
   - '+.shweiya.com'
   - '+.shwglm.com'
@@ -50607,6 +50616,7 @@ payload:
   - '+.sitongedu.org'
   - '+.sitongzixun.com'
   - '+.sitrigroup.com'
+  - '+.situdata.com'
   - '+.sivan.in'
   - '+.sivps.com'
   - '+.siwaman.com'
@@ -53432,7 +53442,6 @@ payload:
   - '+.tenganxinxi.com'
   - '+.tengattack.com'
   - '+.tengbai-it.com'
-  - '+.tengbencdn.com'
   - '+.tengbo.cc'
   - '+.tengchu.com'
   - '+.tengdinggame.com'
@@ -53789,6 +53798,7 @@ payload:
   - '+.tianti.com'
   - '+.tiantian.com'
   - '+.tiantian8.com'
+  - '+.tiantiancaipu.com'
   - '+.tiantianfm.com'
   - '+.tiantianfunds.com'
   - '+.tiantianhr.com'
@@ -55475,6 +55485,7 @@ payload:
   - '+.ucdchina.com'
   - '+.ucdok.com'
   - '+.ucdrs.net'
+  - '+.ucdwhatif.com'
   - '+.ucfly.com'
   - '+.ucfpay.com'
   - '+.uchangdi.com'
@@ -56020,6 +56031,7 @@ payload:
   - '+.uulux.com'
   - '+.uumachine.com'
   - '+.uunice.com'
+  - '+.uuns.com'
   - '+.uunt.com'
   - '+.uupaotui.com'
   - '+.uupark.com'
@@ -56166,6 +56178,7 @@ payload:
   - '+.vaecn.com'
   - '+.vaeliu.com'
   - '+.vaikan.com'
+  - '+.vaillant2.com'
   - '+.vakku.com'
   - '+.validform.club'
   - '+.valinbl.com'
@@ -56285,7 +56298,6 @@ payload:
   - '+.veeqi.com'
   - '+.veer.com'
   - '+.veervr.tv'
-  - '+.veesing.com'
   - '+.veeteam.com'
   - '+.veevlink.com'
   - '+.veguci.com'
@@ -56551,7 +56563,6 @@ payload:
   - '+.vivantecorp.com'
   - '+.vivcms.com'
   - '+.vividict.com'
-  - '+.vivienrgs.com'
   - '+.vivijk.com'
   - '+.viviv.com'
   - '+.vivo.com'
@@ -56578,6 +56589,7 @@ payload:
   - '+.vlan9.com'
   - '+.vlandgroup.com'
   - '+.vlcms.com'
+  - '+.vldbd.com'
   - '+.vliang.com'
   - '+.vlifan.com'
   - '+.vlightv.com'
@@ -56833,6 +56845,7 @@ payload:
   - '+.vysj.com'
   - '+.vyuan8.com'
   - '+.vyun.com'
+  - '+.vz41.com'
   - '+.vzan.cc'
   - '+.vzan.com'
   - '+.vzhang.net'
@@ -59613,7 +59626,6 @@ payload:
   - '+.wxsyedu.net'
   - '+.wxsywh.com'
   - '+.wxt2020.com'
-  - '+.wxtengjian.com'
   - '+.wxthe.com'
   - '+.wxtj10086.com'
   - '+.wxtpb.com'
@@ -59965,6 +59977,7 @@ payload:
   - '+.xctsw.com'
   - '+.xcvgame.cc'
   - '+.xcvmbyte.com'
+  - '+.xcxd-inc.com'
   - '+.xcxs222.com'
   - '+.xcxs520.com'
   - '+.xcxwo.com'
@@ -62082,6 +62095,7 @@ payload:
   - '+.xunyou.mobi'
   - '+.xunyun.com'
   - '+.xunzai.com'
+  - '+.xunzhuang.net'
   - '+.xunzhuo123.com'
   - '+.xunzi.cc'
   - '+.xuooo.com'
@@ -62362,7 +62376,6 @@ payload:
   - '+.xzjxtsg.com'
   - '+.xzkd.com'
   - '+.xzking.com'
-  - '+.xzlkja.com'
   - '+.xzlogo.com'
   - '+.xzlres.com'
   - '+.xzltzc.com'
@@ -62586,6 +62599,7 @@ payload:
   - '+.yanue.net'
   - '+.yanunon.com'
   - '+.yanwenzi.com'
+  - '+.yanxian.org'
   - '+.yanxintong.com'
   - '+.yanxishe.com'
   - '+.yanxiu.com'
@@ -63615,7 +63629,6 @@ payload:
   - '+.yiyingt.com'
   - '+.yiyisoft.com'
   - '+.yiyitech.com'
-  - '+.yiyituzi.com'
   - '+.yiyiwang.net'
   - '+.yiyiwawa.com'
   - '+.yiyongcad.com'
@@ -63806,6 +63819,11 @@ payload:
   - '+.ymrcw.vip'
   - '+.yms7.com'
   - '+.ymsteam.com'
+  - '+.ymstj.xyz'
+  - '+.ymsxq001.xyz'
+  - '+.ymsxq005.xyz'
+  - '+.ymsxq009.xyz'
+  - '+.ymsxqcdn.xyz'
   - '+.ymt.com'
   - '+.ymt360.com'
   - '+.ymtc.com'
@@ -64370,7 +64388,6 @@ payload:
   - '+.yqbank.com'
   - '+.yqbdt.com'
   - '+.yqbimg.net'
-  - '+.yqdown.com'
   - '+.yqfml.com'
   - '+.yqh.com'
   - '+.yqh5.com'
@@ -65458,6 +65475,7 @@ payload:
   - '+.zaiyulin.com'
   - '+.zaiyunli.com'
   - '+.zaizai8.com'
+  - '+.zaizaofa.com'
   - '+.zakdy.com'
   - '+.zallcn.com'
   - '+.zallfuhui.com'
@@ -65780,6 +65798,7 @@ payload:
   - '+.zgcahpw.com'
   - '+.zgcbank.com'
   - '+.zgcbb.com'
+  - '+.zgcbzs.com'
   - '+.zgcdcs.com'
   - '+.zgcdiy.com'
   - '+.zgchawang.com'
@@ -65970,6 +65989,7 @@ payload:
   - '+.zhaidehui.com'
   - '+.zhaidou.com'
   - '+.zhaifu.cc'
+  - '+.zhaifu.co'
   - '+.zhaifu.tv'
   - '+.zhaihai.com'
   - '+.zhaiiker.com'
@@ -66377,6 +66397,7 @@ payload:
   - '+.zhihjf.com'
   - '+.zhihone.com'
   - '+.zhihu.com'
+  - '+.zhihu.dev'
   - '+.zhihu66.com'
   - '+.zhihudsp.com'
   - '+.zhihuiduijian.com'
@@ -66432,7 +66453,6 @@ payload:
   - '+.zhimg.com'
   - '+.zhimi.com'
   - '+.zhimoe.com'
-  - '+.zhineng6.com'
   - '+.zhinengdayi.com'
   - '+.zhinengshe.com'
   - '+.zhinengxia.com'
@@ -67109,7 +67129,6 @@ payload:
   - '+.ziti163.com'
   - '+.zitiao.org'
   - '+.zitiaonc.com'
-  - '+.zitiba.com'
   - '+.zitichina.com'
   - '+.ziticq.com'
   - '+.zitiguanjia.com'
@@ -67612,7 +67631,6 @@ payload:
   - '+.zpaudit.com'
   - '+.zpedu.org'
   - '+.zpfdc.com'
-  - '+.zph.mobi'
   - '+.zphj1987.com'
   - '+.zpidc.com'
   - '+.zpjiashuo.com'
@@ -67714,6 +67732,7 @@ payload:
   - '+.zsjingmi.com'
   - '+.zsjinqi.com'
   - '+.zsjuchuang.com'
+  - '+.zsjxwj.com'
   - '+.zskoubei.com'
   - '+.zsksw.net'
   - '+.zslady.com'
